--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style/header.css">
+    <link rel="stylesheet" href="style/helpers.css">
     <link rel="stylesheet" href="style/style.css">
     <title>Memegen</title>
 </head>
@@ -119,6 +122,8 @@
     <script src="js/storage.service.js"></script>
     <script src="js/mouse.event.service.js"></script>
     <script src="js/service.js"></script>
+    <script src="js/control.on.clicked.js"></script>
+    <script src="js/control.render.js"></script>
     <script src="js/main.js"></script>
 
 
